crates/vihaco-parser/tests/compile_errors/delegate_before_token.stderr
error: #[delegate] variants must be declared after all token-bearing variants
 --> tests/compile_errors/delegate_before_token.rs:3:6
  |
3 | enum Bad {
  |      ^^^
